added content and friends activity section

--- a/Module 1/Exercise 3/index.html
+++ b/Module 1/Exercise 3/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/b2cf010054.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <!-- Sidebar -->
     <div class="sidebar">
       <div class="brand">
         <h1>Spotify <i class="fa-brands fa-spotify"></i></h1>
@@ -31,7 +32,94 @@
             <p>Most Played Songs</p>
           </div>
         </li>
+        <li>
+          <div class="list-items">
+            <i class="fa-solid fa-heart"></i>
+            <p>My Playlist</p>
+          </div>
+        </li>
       </ul>
+    </div>
+    <!-- Sidebar end -->
+    <!-- Content -->
+    <div class="content">
+      <section class="all-songs">
+        <h1>All Songs</h1>
+        <div class="songs-wrapper">
+          <div class="card">
+            <img src="https://placehold.co/200" alt="" />
+            <div class="card-info">
+              <div class="song-info">
+                <p>Song Title</p>
+                <h3>Artist Name</h3>
+              </div>
+              <i class="fa-solid fa-circle-plus add-button"></i>
+            </div>
+          </div>
+          <div class="card">
+            <img src="https://placehold.co/200" alt="" />
+            <div class="card-info">
+              <div class="song-info">
+                <p>Song Title</p>
+                <h3>Artist Name</h3>
+              </div>
+              <i class="fa-solid fa-circle-plus add-button"></i>
+            </div>
+          </div>
+          <div class="card">
+            <img src="https://placehold.co/200" alt="" />
+            <div class="card-info">
+              <div class="song-info">
+                <p>Song Title</p>
+                <h3>Artist Name</h3>
+              </div>
+              <i class="fa-solid fa-circle-plus add-button"></i>
+            </div>
+          </div>
+          <div class="card">
+            <img src="https://placehold.co/200" alt="" />
+            <div class="card-info">
+              <div class="song-info">
+                <p>Song Title</p>
+                <h3>Artist Name</h3>
+              </div>
+              <i class="fa-solid fa-circle-plus add-button"></i>
+            </div>
+          </div>
+      </section>
+      <section class="most-played">
+        <h1>Most Played Songs</h1>
+        <div class="songs-wrapper">
+          <div class="card">
+            <img src="https://placehold.co/200" alt="" />
+            <p>Song Title</p>
+            <h3>Artist Name</h3>
+          </div>
+          <div class="card">
+            <img src="https://placehold.co/200" alt="" />
+            <p>Song Title</p>
+            <h3>Artist Name</h3>
+          </div>
+          <div class="card">
+            <img src="https://placehold.co/200" alt="" />
+            <p>Song Title</p>
+            <h3>Artist Name</h3>
+          </div>
+          <div class="card">
+            <img src="https://placehold.co/200" alt="" />
+            <p>Song Title</p>
+            <h3>Artist Name</h3>
+          </div>
+        </div>
+      </section>
+    </div>
+    <!-- Content end -->
+    <!-- Friends activity -->
+    <div class="friends-activity">
+      <div class="activity-header">
+        <h1>Friends Activity</h1>
+        <i class="fa-solid fa-user-group"></i>
+      </div>
     </div>
   </body>
 </html>
