Added friends activity card content

--- a/Module 1/Exercise 3/index.html
+++ b/Module 1/Exercise 3/index.html
@@ -120,6 +120,22 @@
         <h1>Friends Activity</h1>
         <i class="fa-solid fa-user-group"></i>
       </div>
+      <div class="activity-wrapper">
+        <div class="activity-card">
+            <div class="friends-wrapper">
+                <img src="https://placehold.co/50" alt="Profile picture">
+                <div class="friends-info">
+                    <h3>Friends Name</h3>
+                    <div class="friends-listening">
+                        <p class="pointer">Song Title</p>
+                        <p>-</p>
+                        <p class="pointer">Song Artist</p>
+                    </div>
+                </div>
+            </div>
+            <i class="fa-solid fa-headphones"></i>
+        </div>
+      </div>
     </div>
   </body>
 </html>
