--- a/Module 1/Exercise 3/index.html
+++ b/Module 1/Exercise 3/index.html
@@ -123,9 +123,37 @@
       <div class="activity-wrapper">
         <div class="activity-card">
             <div class="friends-wrapper">
-                <img src="https://placehold.co/50" alt="Profile picture">
+                <img src="https://placehold.co/50" alt="Profile picture" class="pointer">
                 <div class="friends-info">
-                    <h3>Friends Name</h3>
+                    <h3 class="pointer">Friends Name</h3>
+                    <div class="friends-listening">
+                        <p class="pointer">Song Title</p>
+                        <p>-</p>
+                        <p class="pointer">Song Artist</p>
+                    </div>
+                </div>
+            </div>
+            <i class="fa-solid fa-headphones"></i>
+        </div>
+        <div class="activity-card">
+            <div class="friends-wrapper">
+                <img src="https://placehold.co/50" alt="Profile picture" class="pointer">
+                <div class="friends-info">
+                    <h3 class="pointer">Friends Name</h3>
+                    <div class="friends-listening">
+                        <p class="pointer">Song Title</p>
+                        <p>-</p>
+                        <p class="pointer">Song Artist</p>
+                    </div>
+                </div>
+            </div>
+            <i class="fa-solid fa-headphones"></i>
+        </div>
+        <div class="activity-card">
+            <div class="friends-wrapper">
+                <img src="https://placehold.co/50" alt="Profile picture" class="pointer">
+                <div class="friends-info">
+                    <h3 class="pointer">Friends Name</h3>
                     <div class="friends-listening">
                         <p class="pointer">Song Title</p>
                         <p>-</p>
